--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,12 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  .clip-path-homepage {
+    clip-path: polygon(25% 0, 100% 0, 100% 100%, 0% 100%);
+  }
+}
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
     'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
     'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+
+  --primary-red: #b4260b;
+  --secondary-orange: #de8c21;
+  -tertiary-gold: #c9b064;
+  --white-floral: #f9f6ee;
+  --brown: #c79467;
 }
 
 * {
