--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,12 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer utilities {
-  .clip-path-homepage {
-    clip-path: polygon(25% 0, 100% 0, 100% 100%, 0% 100%);
-  }
-}
-
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -26,6 +20,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  /* border: 1px solid green; */
 }
 
 html,
