theme colours updated

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,7 +11,7 @@
 
   --primaryPink: #b4260b;
   --secondaryOrange: #de8c21;
-  --tertiaryGold: #c9b064;
+  --secondaryWhite: #c9b064;
   --secondaryWhite: #f9f6ee;
   --quaternaryBrown: #c79467;
 }
